--- a/proyecto1.html
+++ b/proyecto1.html
@@ -10,28 +10,60 @@
     <main>Francisca Saborio</main>
 <h1>Estudiante</h1>
 
-<i class="bi bi-telephone-forward-fill"></i>
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward-fill" viewBox="0 0 16 16">
-    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"/>
-</svg> 
-<h3> +506 61755617</h3>
+<i class="bi bi-telephone-fill"></i>
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+  </svg><p>+506 61755617</p>
 
+<a href="Tel:+506 61755617"></a>
 
-<i class="bi bi-envelope-open"></i>
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-open" viewBox="0 0 16 16">
-    <path d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.817l5.75 3.45L8 8.917l1.25.75L15 6.217V5.4a1 1 0 0 0-.53-.882zM15 7.383l-4.778 2.867L15 13.117zm-.035 6.88L8 10.082l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738ZM1 13.116l4.778-2.867L1 7.383v5.734ZM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765z"/>
-  </svg> 
-
-
+<i class="bi bi-envelope-open-fill"></i>
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-open-fill" viewBox="0 0 16 16">
+    <path d="M8.941.435a2 2 0 0 0-1.882 0l-6 3.2A2 2 0 0 0 0 5.4v.314l6.709 3.932L8 8.928l1.291.718L16 5.714V5.4a2 2 0 0 0-1.059-1.765zM16 6.873l-5.693 3.337L16 13.372v-6.5Zm-.059 7.611L8 10.072.059 14.484A2 2 0 0 0 2 16h12a2 2 0 0 0 1.941-1.516M0 13.373l5.693-3.163L0 6.873z"/>
+  </svg> <p>franciscasaborio19@gmail.com</p>
   
-  <h3>franciscasaborio19@gmail.com</h3>
-
+  <a href="mailto:franciscasaborio19@gmail.com"></a>
 
   <i class="bi bi-geo-alt-fill"></i>
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
   <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
 </svg>
 
+<p class="ubicacion">Escazu, Guachipelin ,calle Boqueron </p>
+
+
+<h2 class="habilidades">PERSONAL SKILL</h2>
+<li>Trabajo en equipo.</li>
+<li>Aprender con rapidez.</li>
+<li>Participativa.</li>
+<li>Lider</li>
+
+<h2> JOB EXPERIENCE </h2>
+<ul> Liceria Hotel (2016-2018)</ul>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+
+
+<ul>Thynk Unlimited Hotel(2018-2020)</ul>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+<li>Most importantly,make sure that what you're sharing on social media.</li>
+
+
+<h2>EDUCACION</h2>
+<ul>Colegio Liceo de Escazu (2015-2019)</ul>
+<li>Certificado De Conclusion de la educaccion media.</li>
+<li>Bachiller en educacion media.</li>
+<li>Princicio basicos de la contabilidad</li>
+ 
+<ul>OTROS(2023-2024)</ul>
+<li>Operador de computadoras</li>
+
+
+<h2>HOBBY</h2>
 
 
 
