--- a/proyecto1.html
+++ b/proyecto1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="proyecto1.css">
 </head>
 <body>
-    <main>Francisca Saborio</main>
+    <main>Maria Francisca Saborio</main>
 <h1>Estudiante</h1>
 
 <i class="bi bi-telephone-fill"></i>
