--- a/proyecto1.html
+++ b/proyecto1.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>_Curriculum_</title>
-    <link rel="stylesheet" href="proyecto1.css">
+    <link rel="stylesheet" href="Estilos/proyecto1.css">
 </head>
 <body>
-    <main>Maria Francisca Saborio</main>
-<h1>Estudiante</h1>
+    <main class="nombre">Maria Francisca Saborio</main> <b></b>
+<h1 class="puesto">Estudiante</h1><b></b>
 
+
+<div>
 <i class="bi bi-telephone-fill"></i>
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
@@ -30,13 +32,14 @@
 </svg>
 
 <p class="ubicacion">Escazu, Guachipelin ,calle Boqueron </p>
+</div>
 
 
 <h2 class="habilidades">PERSONAL SKILL</h2>
 <li>Trabajo en equipo.</li>
 <li>Aprender con rapidez.</li>
 <li>Participativa.</li>
-<li>Lider</li>
+<li>Lider.</li>
 
 <h2> JOB EXPERIENCE </h2>
 <ul> Liceria Hotel (2016-2018)</ul>
@@ -52,21 +55,28 @@
 <li>Most importantly,make sure that what you're sharing on social media.</li>
 <li>Most importantly,make sure that what you're sharing on social media.</li>
 
+<img src="Imagenes/Screenshot 2024-04-29 101516.png" alt="Foto">
 
+
+<div>
 <h2>EDUCACION</h2>
 <ul>Colegio Liceo de Escazu (2015-2019)</ul>
 <li>Certificado De Conclusion de la educaccion media.</li>
 <li>Bachiller en educacion media.</li>
-<li>Princicio basicos de la contabilidad</li>
- 
+<li>Princicio basicos de la contabilidad.</li>
 <ul>OTROS(2023-2024)</ul>
-<li>Operador de computadoras</li>
+<li>Operador de computadoras.</li>
+</div>
 
-
+<div> 
 <h2>HOBBY</h2>
+<img src="Imagenes/raqueta-de-tenis.png " alt="Tennis">
+<img src="Imagenes/futbol-americano (1).png" alt="Futbol">
+<img width="50px" src="Imagenes/transmision.png" alt="Musica">
+<img width="50px" src="Imagenes/vegetariano.png" alt="Comer">
 
 
-
+</div>
     <script src="proyecto1.js"></script>
 </body>
 </html>
