Acomodo de texto

--- a/proyecto1.html
+++ b/proyecto1.html
@@ -29,7 +29,7 @@
     <p class="num-tel" style="margin-left: 20px;"><i class="fa-solid fa-phone"></i><a href="">Tel:+506 61755617</a></p>
     
     <div class="ctn-email">
-      <i class="fa-solid fa-envelope" style="position: absolute; top: 150px;"></i>
+      <i class="fa-solid fa-envelope" top: 150px;></i>
       
     </div>
 
@@ -43,8 +43,7 @@
   </div>
 
 </div>
-  
-</div>
+  <hr color="negro">
   
   <h2 class="habilidades">PERSONAL SKILL</h2>
   
@@ -74,27 +73,28 @@
 <img src="Imagenes/progresadoor90.png" alt="Responsable" width="70px">
 <p class="headers">Responsable</p></div>
 </div>
-<hr>
 
-
+<div class="experiencia">
+  
 <div class="mover">
-<h2> JOB EXPERIENCE </h2>
-<ul> Liceria Hotel (2016-2018)</ul>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-
-
-<ul>Thynk Unlimited Hotel(2018-2020)</ul>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-<li>Most importantly,make sure that what you're sharing on social media.</li>
-</div>
-
-<div class="fotoo">
-<img width="20px" src="Imagenes/WhatsApp Image 2024-04-30 at 11.15.30 AM.jpeg" alt="Foto">
+  <h2> JOB EXPERIENCE </h2>
+  <ul> Liceria Hotel (2016-2018)</ul>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  
+  
+  <ul>Thynk Unlimited Hotel(2018-2020)</ul>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  <li>Most importantly,make sure that what you're sharing on social media.</li>
+  </div>
+  
+  <div class="fotoo">
+  <img width="450px" src="Imagenes/WhatsApp Image 2024-04-30 at 11.15.30 AM.jpeg" alt="Foto">
+  </div>
 </div>
 
 
