Configuracion en js

--- a/proyecto1.html
+++ b/proyecto1.html
@@ -55,7 +55,7 @@
 
 
 <div class="imagen2">
-  <img src="/Curriculum_Francisca/Imagenes/progresadoor90.png" alt="Trabajo en equipo" width="75px">
+  <img src="Imagenes/progresadoor90.png" alt="Trabajo en equipo" width="75px">
 <p class="headers">Trabajo en equipo</p></div>
 
 
@@ -65,7 +65,7 @@
 
 
 <div class="imagen2">
-<img src="/Curriculum_Francisca/Imagenes/progresadoor90.png" alt="Lider" width="75px">
+<img src="Imagenes/progresadoor90.png" alt="Lider" width="75px">
 <p class="headers">Lider</p></div>
 
 
@@ -123,6 +123,18 @@
   <img class="icono" width="90px" src="Imagenes/vegetariano.png" alt="Comer">
 </div>
 </div>
+
+
+
+<div class="javaScript">
+  <h6 class="perfil"> Visitas al perfil</h6>
+  <p id="Vistas">0</p>
+<button id="megusta" class="megusta">Me Gusta</button>
+<button id="nomegusta" class="nomegusta">No Me Gusta</button>
+<br>
+<button id="enviar" class="enviar"> Enviar</button>
+</div>
+
 
 
     <script src="proyecto1.js"></script>
