--- a/proyecto1.html
+++ b/proyecto1.html
@@ -125,14 +125,18 @@
 </div>
 
 
-
-<div class="javaScript">
-  <h6 class="perfil"> Visitas al perfil</h6>
-  <p id="Vistas">0</p>
-<button id="megusta" class="megusta">Me Gusta</button>
-<button id="nomegusta" class="nomegusta">No Me Gusta</button>
-<br>
-<button id="enviar" class="enviar"> Enviar</button>
+<div class="contenedor-visitas">
+  <div class="titulo-javaScript">
+    <h6 class="perfil"> Visitas al perfil</h6>
+    <p id="Vistas">0</p>
+    </div>
+    <div class="javaScript">
+    <button id="megusta" class="megusta">Me Gusta</button>
+    <button id="nomegusta" class="nomegusta">No Me Gusta</button>
+    <br>
+    
+    <button id="enviar" class="enviar">Enviar</button>
+    </div>
 </div>
 
 
