--- a/proyecto1.html
+++ b/proyecto1.html
@@ -92,7 +92,7 @@
   <li>Most importantly,make sure that what you're sharing on social media.</li>
   </div>
   
-  <div class="fotoo">
+  <div id="foto" class="fotoo">
   <img width="450px" src="Imagenes/WhatsApp Image 2024-04-30 at 11.15.30 AM.jpeg" alt="Foto">
   </div>
 </div>
